@@ -56,6 +56,7 @@ src/object-editor-lsize-page.c
 src/object-editor-position-page.c
 src/object-editor-size-page.c
 src/object-editor-text-page.c
+src/object-editor-shadow-page.c
 src/merge-properties-dialog.c
 src/merge-properties-dialog.h
 src/print.c
@@ -102,6 +103,14 @@ src/merge-text.h
 src/merge-evolution.c
 src/text-node.c
 src/text-node.h
+src/color-combo.c
+src/color-combo.h
+src/color-combo-color-menu-item.c
+src/color-combo-color-menu-item.h
+src/color-combo-history.c
+src/color-combo-history.h
+src/color-combo-menu.c
+src/color-combo-menu.h
 src/wdgt-print-copies.c
 src/wdgt-print-copies.h
 src/wdgt-print-merge.c
@@ -120,51 +129,50 @@ src/color.c
 src/color.h
 src/debug.c
 src/debug.h
-src/mygal/color-group.c
-src/mygal/color-group.h
-src/mygal/color-palette.c
-src/mygal/color-palette.h
-src/mygal/e-colors.c
-src/mygal/e-colors.h
-src/mygal/e-util.h
-src/mygal/mygal-combo-box.c
-src/mygal/mygal-combo-box.h
-src/mygal/widget-color-combo.c
-src/mygal/widget-color-combo.h
 src/critical-error-handler.c
 src/warning-handler.c
 
 libglabels/category.c
-libglabels/template.c
-libglabels/template.h
+libglabels/category.h
+libglabels/db.c
+libglabels/db.h
+libglabels/enums.h
+libglabels/libglabels-private.h
 libglabels/paper.c
 libglabels/paper.h
-libglabels/xml-template.c
-libglabels/xml-template.h
-libglabels/xml-paper.c
-libglabels/xml-paper.h
+libglabels/str.c
+libglabels/str.h
+libglabels/template.c
+libglabels/template.h
 libglabels/xml.c
 libglabels/xml.h
+libglabels/xml-category.c
+libglabels/xml-category.h
+libglabels/xml-paper.c
+libglabels/xml-paper.h
+libglabels/xml-template.c
+libglabels/xml-template.h
 
-data/glade/merge-properties-dialog.glade
-data/glade/new-label-dialog.glade
-data/glade/object-editor.glade
-data/glade/prefs-dialog.glade
-data/glade/print-custom-widget.glade
-data/glade/property-bar.glade
-data/glade/template-designer.glade
-data/glade/wdgt-media-select.glade
-data/glade/wdgt-rotate-label.glade
+data/builder/merge-properties-dialog.glade
+data/builder/new-label-dialog.glade
+data/builder/object-editor.glade
+data/builder/prefs-dialog.glade
+data/builder/print-custom-widget.glade
+data/builder/property-bar.glade
+data/builder/template-designer.glade
+data/builder/wdgt-media-select.glade
 
 data/templates/paper-sizes.xml
+data/templates/categories.xml
 data/templates/avery-us-templates.xml
 data/templates/avery-iso-templates.xml
 data/templates/avery-other-templates.xml
-data/templates/categories.xml
-data/templates/zweckform-iso-templates.xml
+data/templates/brother-other-templates.xml
+data/templates/dymo-other-templates.xml
 data/templates/misc-us-templates.xml
 data/templates/misc-iso-templates.xml
 data/templates/misc-other-templates.xml
+data/templates/zweckform-iso-templates.xml
 
 data/desktop/glabels.desktop.in
 
